--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -33,3 +33,9 @@ a {
   background: #ccc;
   margin-right: 10px;
 }
+
+/* markdown中代码块不换行问题解决 */
+code {
+  white-space: break-spaces;
+  word-break: break-all;
+}
